@@ -31,21 +31,18 @@ nodist_libglimmer_la_SOURCES = glimmer_vers.F90
 
 libglimmer_IO_la_SOURCES = glimmer_anomcouple.F90 glimmer_filenames.F90 glimmer_ncdf.F90 \
                           glimmer_ts.F90 glimmer_config.F90 \
-                          glimmer_writestats.F90 ncdf_utils.F90 test_ts.F90 \
-                          test_writestats.F90 writestats.c writestats.h cfortran.h 
+                          glimmer_writestats.F90 ncdf_utils.F90 writestats.c writestats.h cfortran.h 
 
 nc2config_SOURCES = nc2config.F90
-nc2config_LDADD = libglimmer-IO.la libglimmer.la $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 
-test_config_SOURCES = test_config.F90 glimmer_config.F90 glimmer_log.F90
-test_integrate_SOURCES = test_integrate.F90 glimmer_global.F90 \
-                         glimmer_physcon.F90 glimmer_integrate.F90
-test_commandline_SOURCES = test_commandline.F90 glimmer_commandline.F90
-test_ts_SOURCES = glimmer_ts.F90 glimmer_log.F90 test_ts.F90
-test_writestats_SOURCES = test_writestats.F90 glimmer_writestats.F90 writestats.c writestats.h cfortran.h
+test_config_SOURCES = test_config.F90
+test_integrate_SOURCES = test_integrate.F90
+test_commandline_SOURCES = test_commandline.F90
+test_ts_SOURCES = test_ts.F90
+test_writestats_SOURCES = test_writestats.F90
 
 AM_FCFLAGS = $(NETCDF_CPPFLAGS) $(HDF5_CPPFLAGS)
-LDADD = $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
+LDADD = libglimmer-IO.la libglimmer.la $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 AM_CFLAGS=$(CFORTRAN_CFLAGS)
 
 # handling subversion versioning
@@ -61,7 +58,7 @@ endif
 
 
 f90_dep.mak:	$(srcdir)/*.F90 $(BUILT_SOURCES) glimmer_vers.F90
-		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -o $@ $^
+		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -l -o $@ $^
 
 -include f90_dep.mak
 
